--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-   Hello World     
-</body>
+    <head>
+    </head>
+    <body>
+        <div>
+            <img src="D:\File Oriza Sativa\Git Belajar\Dosen_Approval.jpg" alt="today agenda" width="500" height="400">
+            <h2>Oriza's Agenda</h2>
+        </div>  
+    </body>
 </html>
