--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
     </head>
     <body>
-        <div>
-            <img src="D:\File Oriza Sativa\Git Belajar\Dosen_Approval.jpg" alt="today agenda" width="500" height="400">
-            <h2>Oriza's Agenda</h2>
+        <div id="profile-container">
+            <img id="profile-image" src="D:\File Oriza Sativa\Git Belajar\Dosen_Approval.jpg" alt="today agenda" width="500" height="400"/>
+            <h2 id="profile-name"> Oriza's Agenda</h2>
         </div>  
     </body>
 </html>
