added style for id footer

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <div id="profile-container">
             <img id="profile-image" src="D:\File Oriza Sativa\Git Belajar\Dosen_Approval.jpg" alt="today agenda" width="500" height="400"/>
             <h2 id="profile-name"> Oriza's Agenda</h2>
-        </div>  
+        </div> 
+        <div id="footer">Footer</div> 
     </body>
 </html>
